tests/baselines/reference/YieldExpression6_es6.errors.txt
YieldExpression6_es6.ts(2,9): error TS2488: Type '() => any' must have a '[Symbol.iterator]()' method that returns an iterator.


==== YieldExpression6_es6.ts (1 errors) ====
    function* foo() {
      yield*foo
            ~~~
!!! error TS2488: Type '() => any' must have a '[Symbol.iterator]()' method that returns an iterator.
    }